--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
 body{
     position: relative;
     min-height: 100vh;
-    padding-bottom: 6rem;
+    padding-bottom: 5rem;
 }
 
 footer{
